# computer_controller

./: README.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/windows_controller/windows_controller/: MainActivity.kt
client/lib/: main.dart
client/lib/models/: control_modes.dart  keyboard_control_mode.dart  tcp_server.dart  tcp_socket_connection.dart
client/lib/widgets/: computer_controller.dart  create_server_dialog.dart  keyboard_control.dart  mouse_control.dart  windows_controller.dart
client/test/: widget_test.dart
server/: Cargo.toml
server/src/: main.rs
server/src/control_handler/: mod.rs
server/src/macos_keypress_handler/: mod.rs
server/src/tcp_server/: mod.rs
server/src/windows_control_handler/: mod.rs
server/src/windows_keypress_handler/: mod.rs
