[package]
name = "windows_controller_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }
threadpool = "1.0"
winapi = { version = "0.3.9", features = ["winuser"] }
