[package]
name = "computer_controller_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }
enigo = "0.1.2"
threadpool = "1.0"
winapi = { version = "0.3.9", features = ["winuser"] }
chrono = "0.4.26"
